# LexicomAI.API

./: .env  README.md  docker-compose.yml
backend/: backend.dockerfile  gunicorn_conf.py
backend/app/: pyproject.toml
backend/app/app/: api.py  config.py  deps.py  main.py  pre_start.py
backend/app/app/endpoints/: lexicomai.py
backend/app/app/schemas/: __init__.py  lexicomai.py
backend/app/app/utils/: cache.py
redis/: dump.rdb
redis/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
