[tool.poetry]
name = "lexicomai-api"
version = "0.1.0"
description = ""
authors = ["VladimirMinkaKRD <barsh58@yandex.ru>"]
readme = "README.md"
packages = [{include = "lexicomai"}]

[tool.poetry.dependencies]
python = "3.12.1"
uvicorn = "0.26.0"
fastapi = "0.109.0"
tenacity = "8.2.2"
pydantic = "2.5.3"
gunicorn = "21.2.0"
pydantic-settings = "2.1.0"
redis = "^5.0.2"
aioredis = "^2.0.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"